[gd_scene load_steps=10 format=3 uid="uid://q56taxhy2mot"]

[ext_resource type="Script" path="res://Main.gd" id="1_70ykf"]
[ext_resource type="Script" path="res://IndirectView.gd" id="2_8xn6f"]
[ext_resource type="Script" path="res://CommandInterface.gd" id="2_xp2d0"]
[ext_resource type="Script" path="res://Midi.gd" id="3_68liq"]
[ext_resource type="Theme" uid="uid://cccwlwk873tqt" path="res://styles/code_edit.theme" id="3_fotw2"]
[ext_resource type="Script" path="res://CodeEdit.gd" id="3_xiw00"]
[ext_resource type="StyleBox" uid="uid://dqdhrgvrn3l8a" path="res://styles/left-margin-transparent.stylebox" id="5_efpnp"]
[ext_resource type="Script" path="res://MirrorDisplay.gd" id="7_hhsd4"]

[sub_resource type="ViewportTexture" id="ViewportTexture_8vqmj"]
viewport_path = NodePath("IndirectView")

[node name="Main" type="Node2D"]
script = ExtResource("1_70ykf")

[node name="IndirectView" type="SubViewport" parent="."]
disable_3d = true
size = Vector2i(1920, 1080)
script = ExtResource("2_8xn6f")

[node name="Actors" type="Node" parent="IndirectView"]

[node name="CommandInterface" type="Node" parent="."]
script = ExtResource("2_xp2d0")

[node name="Midi" type="Node" parent="."]
script = ExtResource("3_68liq")

[node name="Routines" type="Node" parent="."]

[node name="VSplitContainer" type="VSplitContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = -1

[node name="CodeEdit" type="CodeEdit" parent="VSplitContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_fotw2")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
scroll_fit_content_height = true
caret_type = 1
gutters_draw_line_numbers = true
indent_use_spaces = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("3_xiw00")

[node name="PostWindow" type="CodeEdit" parent="VSplitContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_fotw2")
theme_override_styles/normal = ExtResource("5_efpnp")
theme_override_styles/read_only = ExtResource("5_efpnp")
placeholder_text = "..."
editable = false
context_menu_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
scroll_fit_content_height = true

[node name="SaveFileDialog" type="FileDialog" parent="."]
title = "Load Preset"
initial_position = 1
size = Vector2i(1280, 768)
access = 2
show_hidden_files = true

[node name="OpenFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(1280, 768)
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true

[node name="LoadPresetDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(1280, 768)
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="MirrorDisplay" type="Sprite2D" parent="."]
texture = SubResource("ViewportTexture_8vqmj")
script = ExtResource("7_hhsd4")
